--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
+    <h1> Todays Weather</h1>
+    <div>
+<form id="form" action=""><input id="inPut" type="text"><button type="submit" id="button" > Submit </button></form>
+
+</div>
+<div>
+    <p id="name"></p>
+    <p id="temp"></p>
+</div>
+    <script
+  src="https://code.jquery.com/jquery-3.5.0.min.js"
+  integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
+  crossorigin="anonymous"></script>
+    <script src="weather.js" ></script>
     
 </body>
 </html>
