--- a/index.html
+++ b/index.html
@@ -4,21 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+    <title>Oh Weather</title>
 </head>
 <body>
-    <h1> Todays Weather</h1>
+  <div class="container">
+    <h1 id="header"> Sweet Weather</h1>
     <div>
-<form id="form" action=""><input id="inPut" type="text"><button type="submit" id="button" > Submit </button></form>
+<form class="center" id="form" action=""><input id="inPut" type="text"><button type="submit" id="button" > Submit </button></form>
 
 </div>
-<div id="weatherContainer">
+<div class="center" id="weatherContainer">
     <p id="name"></p>
     <p id="date"></p>
     <p id="temp"></p>
     <span id="uv"></span>
     <div id=fiveday></div>
 </div>
+</div>
+ 
+
+<footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Weather&Money</strong> by <a href="https://jgthms.com">CJ Ruacho</a>. The source code is licensed
+        <a href="http://opensource.org/licenses/mit-license.php">MTC</a>. The website content
+        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+      </p>
+    </div>
+  </footer>
+
+
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script
   src="https://code.jquery.com/jquery-3.5.0.min.js"
