--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <div class="container">
-    <h1 id="header"> Sweet Weather</h1>
+      <div id="header">
+    <h1 id="sweet"> Sweet Weather</h1>
+</div>
     <div>
 <form class="center" id="form" action=""><input id="inPut" type="text"><button type="submit" id="button" > Submit </button></form>
 
